--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
 
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "192.168.3.45:25000/sub?"
+
 # API 后端
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://api.wcc.best"
 
